# spotify-ai-analytics

./: .env.example  .gitignore  LICENSE  README.md  develop_notes.md  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
data/spotify_history/: sample_history.json
doc/: TODOs.md  dashboard_plan.md  spotify_chatbot.md  test_guide.md
examples/: demo_no_api.py  main.py
src/analytics/dashboard/: app.py  time_analysis.py  track_artist.py
src/analytics/features/: analysis_functions.py
src/app/: chatbot_page.py  dashboard.py  main_gui.py  main_page.py  time_analysis.py  track_analysis.py
src/config/: settings.py
src/dataloader/: __init__.py  analysis_functions.py  data_loader.py  models.py
src/spotify_agent/: __init__.py  graph.py  nodes.py  prompts.py  schemas.py  state.py  tools.py  utils.py
src/utils/: agent_utils.py  data_loader.py  loggings.py  models.py
tests/: conftest.py  test_dataloader.py  test_query_tools.py
tests/integration/: test_agent_smoke.py  test_chatbot_scenarios.py  test_llm.py
