[project]
name = "spotify-ai-analytics"
version = "0.1.0"
description = "A LangGraph-based AI agent for analyzing Spotify listening history using LLM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.6",
    "langchain-core==1.2.5",
    "langchain-google-genai>=4.1.2",
    "langchain-openai==1.1.6",
    "langgraph==1.0.5",
    "numpy>=2.4.0",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polars>=1.36.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pytest>=9.0.2",
    "python-dotenv==1.2.1",
    "streamlit>=1.52.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "deptry>=0.24.0",
    "pytest>=9.0.2",
]
